--- a/src/app.html
+++ b/src/app.html
@@ -53,7 +53,7 @@
     gtag('config', 'G-4L7GTF77EH')
   </script>
 
-  <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
+  <body>
     <div>%sveltekit.body%</div>
   </body>
 </html>
