--- a/src/app.html
+++ b/src/app.html
@@ -42,15 +42,7 @@
 			}
 		</script>
 	</head>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'G-4L7GTF77EH');
-	</script>
+	<script></script>
 
 	<body data-sveltekit-preload-data="hover" data-theme="auyer-theme">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
